app/assets/stylesheets/_projects.sass
#projects, #events

  .orbit-bullets
    top: 265px
    left: 200px

  .orbit-prev, .orbit-next
    display: none

  .orbit-caption
    background-color: #000000
    bottom: 30px
    color: #FFFFFF
    font-size: 1.6em
    padding: 0 5px
    position: absolute
    right: 350px
    text-transform: uppercase
    width: auto

  a
    color: black
    text-decoration: none

  #list
    background: $blue
    color: white
    border-bottom: 1px solid black

    .event
      padding: 64px 0
      border-bottom: 1px solid white

      &:last-child
        border: none

      p
        color: white

#project, #event

  .info
    background: $blue
    color: white

    h3
      color: white

  .buttons
    margin-top: 80px

    a
      border: 1px solid white
      padding: 10px 0
      color: white
      font-width: normal
      width: 195px
      text-align: center
      display: block

